# aria

./: .env.example  .gitignore  .opencode.json  ACKNOWLEDGEMENTS.md  AGENTS.md  ARIA.md  CONTRIBUTING.md  Makefile  README.md  fase2_plan.md  fase2_plan_v2.mMD  findings.md  go.mod  go.sum  main.go  package.json  progress.md  pyproject.toml  task_plan.md
.aria/config/: agent_capability_matrix.yaml  llm_routing.yaml  mcp_catalog.yaml  proxy.yaml
.aria/credentials/: .sops.yaml
.aria/kilocode/: kilo.json  mcp.json
.github/workflows/: ci.yml
.workflow/: state.md
cmd/: models_cli.go  orchestrator_commands.go  root.go
cmd/schema/: main.go
docs/: implementation-plan-P1-P2.md  implementation-plan-semantic-routing.md
docs/analysis/: 00-handoff-prompt.md  2026-03-30-architettura-implementazione-report.md  2026-03-31-knowledge-agency-hierarchical-assessment.md  2026-03-31-knowledge-agency-routing-analysis.md  analisi_sostenibilita_mcp_report.md  blueprint-alignment-report.md  mcp_gateway_evaluation.md  mcp_tool_search_analysis_1.md  memory_subsystem_health_check_2026-04-24.md  report_gemme_reddit_mcp.md  ricerca_mcp_produttività.md  trader_agent_session_analysis_2026-05-03.md  traveller_amadeus_airbnb_issues.md  workspace_enhancement_analysis.md
docs/debug/: trader_agent_debug_report_2026-05-03.md
docs/foundation/: ARIA_blueprint_audit.md  BLUEPRINT.md  agent-capability-matrix.md  aria_foundation_blueprint.md
docs/guides/: aria-entity-creation-guide.md
docs/handoff/: auto_memory_handoff.md  first-start-handoff.md  mcp_google_workspace_oauth_handoff.md  workspace_phase0_1_verification_2026-04-22.md
docs/implementation/: FASE1_CLI_INTEGRATION.md
docs/issues/: memory-embedding-gap.md
docs/operational/: workspace_telemetry_spec.md
docs/operations/: disaster_recovery.md  provider_exhaustion.md  rollback_matrix.md  runbook.md  traveller-backend-setup.md  traveller-google-cloud-setup.md  workspace_oauth_runbook.md
docs/plans/: 2026-03-28-aria-implementazione-fasi-iniziali.md  2026-03-28-fase2-memory-learning-completion-plan.md  2026-03-28-fase3-scheduling-implementation-plan.md  2026-03-28-fase3-scheduling-implementation-plan.mmd  2026-03-29-fase5-agencies-implementation-plan.md  2026-03-29-fase5-weather-agency-proof-of-concept.md  2026-03-30-aria-production-ready-implementation-plan.md  2026-03-30-aria-standalone-separation-plan-v2.md  2026-03-30-aria-standalone-separation-plan-v3.md  2026-03-30-aria-standalone-separation-plan-v4.md  2026-03-30-aria-standalone-separation-plan.md  2026-03-30-memory-embedding-gap-remediation-plan.md  2026-03-30-orchestrator-enhancement-master-plan.md  2026-03-31-analisi-profonda-memory-4-layer-locale-e-piano-risoluzione.md  2026-03-31-knowledge-agency-option-a-alignment-implementation-plan.md  P0-1-INTERFACE-CONTRACT-DRIFT-HANDOFF.md  P0-1-INTERFACE-CONTRACT-DRIFT-PLAN.mmd  aria-boundary-policy.md  aria-opencode-cleanup-inventory.md  aria-standalone-task-plan.md  auto_persistence_echo.md  enhancment_workspace_PHASES-0_1_plan.md  gestione_mcp_refoundation_plan.md  gestione_mcp_refoundation_plan_v2.md  google_workspace_agent_full_operational_plan.md  google_workspace_authz_debug_plan_2026-04-23.md  knowledge-agency-implementation-plan.md  knowledge-agency-prompt.md  mcp_productivity_coordination_optimization_plan_2026-04-29.md  mcp_search_tool_plan_1.md  memory_gaps_remediation_plan_2026-04-24.md  memory_gaps_remediation_progress.md  memory_recovery.md  research_academic_reddit_1.md  research_academic_reddit_2.md  research_restore_plan.md  rispristino_agenti_ricerca_google.md  searcher_optimizer_plan.md  stabilizzazione_aria.md  write_workspace_issues_plan.md
docs/protocols/: protocollo_creazione_agenti.md
docs/roadmaps/: google-workspace_MCP_enhanchement_roadmap.md  workspace_baseline_snapshot_2026-04-22.md  workspace_tool_governance_matrix.md  workspace_tool_profile_matrix.md
docs/runbooks/: incident-response.md  nutrition-agency.md  release-checklist.md  rollback-plan.md
docs/startup/: STARTUP_PLAN.md
docs/temp-docs/: research_agent_enhancement.md  ricerca_training_qlora.md
internal/app/: app.go  aria_integration.go  lsp.go
internal/completions/: files-folders.go
internal/config/: config.go
internal/db/: agencies.sql.go  connect.go  db.go  embeddings.sql.go  episodes.sql.go  episodes_adv.sql.go  facts.sql.go  memory.sql.go  models.go  permission_guardrail.sql.go  procedures.sql.go  querier.go  task_events.sql.go  tasks.sql.go
internal/diff/: diff.go
internal/fileutil/: fileutil.go
internal/history/: file.go
internal/logging/: logger.go  writer.go
internal/lsp/: client.go  handlers.go  language.go  methods.go  transport.go
internal/message/: content.go  message.go
internal/permission/: permission.go
internal/session/: session.go
internal/startup/: bootstrap.go  bootstrap_test.go  checker.go  circuitbreaker.go  doc.go  recovery.go  startup_tui.go  status.go
internal/tui/: tui.go
internal/version/: version.go
scripts/: audit_drift.py  backup.sh  bootstrap.sh  check_mcp_drift.py  install_systemd.sh  mcp-stdio-filter.py  mcp-stdio-filter.sh  oauth_debug.py  oauth_exchange.py  oauth_first_setup.py  pdf_extract.py  proxy_shadow_observe.py  reconcile_state.py  restore.sh  rollback_baseline.sh  seed_scheduler.py  smoke_db.sh  test_backup_restore.sh  validate_agents.py  validate_skills.py  validate_workspace_governance.py  workspace-write-health.py  workspace_auth.py
scripts/benchmarks/: README.md  mcp_startup_latency.py
scripts/memory/: cleanup_benchmark_entries.py
scripts/wrappers/: aria-amadeus-wrapper.sh  brave-wrapper.sh  exa-wrapper.sh  firecrawl-wrapper.sh  github-wrapper.sh  google-workspace-wrapper.sh  pubmed-wrapper.sh  reddit-wrapper.sh  scientific-papers-wrapper.sh  searxng-wrapper.sh  tavily-wrapper.sh
src/aria/: __init__.py  config.py
systemd/: aria-backup.service  aria-backup.timer  aria-gateway.service  aria-memory.service  aria-scheduler.service
tests/: __init__.py  conftest.py
tests/benchmarks/: memory_recall_p95.py  phase1_slo.py  phase1_slo_report.md
(+719 files in other folders)
